@@ -418,11 +418,11 @@ def periodic_angle(df, padding=45):
 
     '''
 
-    df1 = df[df.dihedral > 180 - padding]
+    df1 = df[df.dihedral > 180 - padding].copy(deep=True)
     df1.dihedral -= 360
-    df2 = df[df.dihedral < -180 + padding]
+    df2 = df[df.dihedral < -180 + padding].copy(deep=True)
     df2.dihedral += 360
-    df_aug = pd.concat([df1, df, df2]).reset_index()
+    df_aug = pd.concat([df1, df, df2]).reset_index(drop=True)
 
     return df_aug
 
